# fiocruz-genomics-portal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  docker-compose.prod.yml  docker-compose.yml  environment.yml  gunicorn_conf.py  pyproject.toml
app/: main.py
app/api/routes/: gene.py  region.py  stats.py  variant.py
app/core/: config.py
app/db/: elasticsearch.py
app/schemas/: common.py  gene.py  variant.py
app/utils/: clinvar.py  stats.py
code/: app.py  create_annotation_ht.py  parse-json-python.ipynb  parse_json_python.py  test_table.ipynb
code/.ipynb_checkpoints/: test_table-checkpoint.ipynb
code/legacy/: load_transform.ipynb  parse-json-python.ipynb  teste.py
code/logs/: hail
data/: .variant_stats.tsv.crc
data/output/variants.ht/: .README.txt.crc  .metadata.json.gz.crc  README.txt
data/output/variants.ht/rows/: .metadata.json.gz.crc
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  App.test.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Badge.jsx  Header.jsx  Icon.jsx  IconLogo.jsx  SearchHero.jsx  StatCard.jsx  VariantTable.jsx
frontend/src/components/Charts/: ConservationBar.jsx  ConservationScatter.jsx  FrequencyPie.jsx  PopulationBar.jsx  QualityHistogram.jsx  VariantTypeBar.jsx
frontend/src/hooks/: useSearch.js
nginx/: Dockerfile  nginx.conf
scripts/: README.md  export_to_es.py  parse_nirvana.py
tests/: test_api.py  test_clinvar.py  test_variant_format.py
(+734 files in other folders)
